--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <option value="octal">Octal</option>
                 <option value="binary">Binary</option>
             </select>
-            <input type="text" placeholder="Enter the value here"class="input">
+            textarea name="" id="" cols="30" rows="8" placeholder="Enter the value here" class="input"></textarea>
         </section>
 
         <section>
@@ -33,7 +33,7 @@
                 <option value="octal">Octal</option>
                 <option value="binary">Binary</option>
             </select>
-            <input type="text" class="output" disabled>
+            <textarea name="" id="" cols="30" rows="8" class="output" disabled></textarea>
         </section>
         
         <div>
