--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <option value="octal">Octal</option>
                 <option value="binary">Binary</option>
             </select>
-            textarea name="" id="" cols="30" rows="8" placeholder="Enter the value here" class="input"></textarea>
+            <textarea name="" id="" cols="30" rows="8" placeholder="Enter the value here" class="input"></textarea>
         </section>
 
         <section>
